[package]
name = "mongodb-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
chrono = { version = "0.4.37", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }

[dependencies.mongodb]
version = "2.8.2"
default-features = false
features = ["sync"]

[dependencies.bson]
version = "2.10.0"
